# thingsbridge

./: .gitignore  CLAUDE.md  README.md  architecture_diagram.py  architecture_overview.md  debug_resources.py  pyproject.toml  test_mcp_inspector.py  test_server.py
docs/: -  MCP_RESOURCE_RESEARCH_REPORT.md  PROJECT_PLAN.md  batch-tools-guidelines.txt  things3_automation_guide.txt
tests/: __init__.py  conftest.py  test_applescript.py  test_bulk_tools.py  test_cache.py  test_cleanup.py  test_cleanup_system.py  test_edge_cases.py  test_helpers.py  test_persistent_bulk_cache.py  test_server.py  test_things3.py  test_tools.py  test_tools_logic.py
thingsbridge/: __init__.py  applescript.py  applescript_builder.py  bulk_tools.py  cache.py  core_tools.py  resources.py  search_tools.py  server.py  things3.py  tools.py  tools_original.py  utils.py
